[package]
name = "bet-on-games"
version = "0.1.0"
edition = "2021"

# We prefer disabling all default features and explicitly define what features we need
[dependencies]
axum = { version = "0.6.18", default-features = false, features = ["tokio", "http1", "json", "headers"] }
jsonwebtoken = { version = "8.3.0", default-features = false, features = [] }
once_cell = { version = "1.17.1", default-features = false, features = [] }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = [] }
tokio = { version = "1.28.1", default-features = false, features = ["rt-multi-thread", "macros"] }

# Performance optimization for Release builds
[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3